2008-03-10  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/versioncontrol/git.py: fix git-svn and git-cvsimport
	for recent versions of git (git-stash usage has changed).

2008-03-08  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	Added "eog-plugins" and "gnome-themes-extras".

2008-03-07  William Jon McCann  <jmccann@redhat.com>

	* modulesets/freedesktop.modules: Use correct gypsy
	repo location.

2008-03-07  William Jon McCann  <jmccann@redhat.com>

	* modulesets/freedesktop.modules: Add gypsy and geoclue.

2008-03-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules:
	Update all telepathy related modules: clened dependencies,
	added "telepathy-idle", "pymsn", "telepathy-haze",
	"telepathy-butterfly", "telepathy-python" plus metamodules
	"meta-telepathy-library" and "meta-telepathy-connection-managers".

	Note 1: to build pymsn see http://live.gnome.org/JhbuildIssues/pymsn
	Note 2: to build haze you need libpurple
	
2008-03-05  Xan Lopez  <xan@gnome.org>
	
	* modulesets/gnome-2.22.modules: epiphany-extensions branched
	for gnome-2-22.

2008-03-05  Xan Lopez  <xan@gnome.org>

	* modulesets/gnome-suites-2.22.modules: epiphany branched
	for gnome-2-22.

2008-03-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: Totem branched
	for gnome-2-22.

2008-02-29  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules:
	* modulesets/gnome-external-deps-2.24.modules:
	Updated dbus to 1.1.20. Note this is the first stable release
	for 1.2.x series, see announchment for details.

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* modulesets/freedesktop-2.24.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-external-deps-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: add 2.24 modulesets

2008-02-28  Frederic Peters  <fpeters@0d.be>
