@@ -1,5 +1,11 @@
 2008-03-10  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
 
+	* jhbuild/versioncontrol/git.py: recent versions of git should not
+	do a checkout of "origin/master", but the local branch name.
+	(closes: #511398)
+
+2008-03-10  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
 	* jhbuild/versioncontrol/git.py: fix git-svn and git-cvsimport
 	for recent versions of git (git-stash usage has changed).
 
